--- a/mycarpark/app/build.gradle
+++ b/mycarpark/app/build.gradle
@@ -29,6 +29,10 @@ android {
 }
 
 dependencies {
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation "androidx.activity:activity:1.2.0"
     implementation "androidx.fragment:fragment:1.3.4"
 
