added remove car, added open in maps, minor fixes and changes

--- a/mycarpark/app/src/main/AndroidManifest.xml
+++ b/mycarpark/app/src/main/AndroidManifest.xml
@@ -19,10 +19,31 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBYgVhPmZatfkMgbD55gHkG2QSz1jm-508" />
+            android:value="-----" />
+
+        <receiver android:name=".AlarmUtility$AlarmReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".AlarmUtility$BootCompletedReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".RestoreAlarmsService"/>
+
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 </manifest>
